--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 networks:
-  logging:
+  default:
 
 services:
   vector:
@@ -11,7 +11,7 @@ services:
     ports:
       - "8686:8686"
     networks:
-      - logging
+      - default
     depends_on:
       - loki
 
@@ -23,7 +23,7 @@ services:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
     networks:
-      - logging
+      - default
 
   grafana:
     image: grafana/grafana:latest
@@ -39,7 +39,7 @@ services:
     ports:
       - "3000:3000"
     networks:
-      - logging
+      - default
     env_file:
       - .env
 
@@ -50,7 +50,7 @@ services:
       - /var/log:/var/log
     command: -config.file=/etc/promtail/config.yml
     networks:
-      - logging
+      - default
 
   # Other metrics
   prometheus:
@@ -63,7 +63,7 @@ services:
     ports:
       - "9090:9090"
     networks:
-      - logging
+      - default
 
   # For system metrics
   node_exporter:
@@ -71,4 +71,4 @@ services:
     ports:
       - "9100:9100"
     networks:
-      - logging
+      - default
