--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
     restart: always
     image: grafana/loki:latest
     volumes:
-      - /docker_data/loki:/loki
+      - /docker_dataaa/loki:/etc/loki/
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
