--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -1,7 +1,7 @@
 global:
   scrape_interval: 5s  # Scrape every 5 seconds
 
-scrape_configs:
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets: ['node_exporter:9100']
+# scrape_configs:
+#   - job_name: 'node_exporter'
+#     static_configs:
+#       - targets: ['node_exporter:9100']
