--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,6 +64,7 @@ services:
       - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
       - /docker_data/prometheus:/prometheus
     command:
+      - --web.enable-remote-write-receiver
       - --config.file=/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
