--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,6 @@ services:
     restart: always
     image: grafana/loki:latest
     volumes:
-      - ./configs/loki.yaml:/etc/loki/local-config.yaml
       - /docker_data/loki:/loki
     ports:
       - "3100:3100"
@@ -62,7 +61,7 @@ services:
     restart: always
     image: prom/prometheus
     volumes:
-      - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
+      # - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
       - /docker_data/prometheus:/prometheus
     command:
       - --web.enable-remote-write-receiver
@@ -71,6 +70,33 @@ services:
       - "9090:9090"
     networks:
       - default
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
+        apiVersion: 1
+        datasources:
+        - name: Loki
+          type: loki
+          access: proxy
+          orgId: 1
+          url: http://loki:3100
+          basicAuth: false
+          isDefault: false
+          version: 1
+          editable: false
+        - name: Prometheus
+          type: prometheus
+          orgId: 1
+          url: http://prometheus:9090
+          basicAuth: false
+          isDefault: true
+          version: 1
+          editable: false
+        EOF
+        /run.sh
 
   # For system metrics
   # node_exporter:
