--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -80,13 +80,13 @@ services:
   #   networks:
   #     - default
 
-  # alloy:
-  #   image: grafana/alloy:latest
-  #   volumes:
-  #     - ./configs/config.alloy:/etc/alloy/config.alloy:ro
-  #     - /docker_data/alloy:/var/lib/alloy/data
-  #   ports:
-  #     - "12345:12345"
-  #   networks:
-  #     - default
-  #   command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+  alloy:
+    image: grafana/alloy:latest
+    volumes:
+      - ./configs/config.alloy:/etc/alloy/config.alloy:ro
+      - /docker_data/alloy:/var/lib/alloy/data
+    ports:
+      - "12345:12345"
+    networks:
+      - default
+    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
