--- a/configs/datasources.yaml
+++ b/configs/datasources.yaml
@@ -3,16 +3,19 @@ apiVersion: 1
 datasources:
   - name: Loki
     type: loki
-    url: http://loki:3100
-    isDefault: true
     access: proxy
+    orgId: 1
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
     version: 1
     editable: false
-    basicAuth: false
   
   - name: Prometheus
     type: prometheus
+    orgId: 1
     url: http://prometheus:9090
-    isDefault: false
-    access: proxy
+    basicAuth: false
+    isDefault: true
+    version: 1
     editable: false
