--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,8 +22,8 @@ services:
     restart: always
     image: grafana/loki:${GRAFANA_LOKI_VERSION:-3.5.0}
     volumes:
-      - ./configs/loki.yaml:/etc/loki/local-config.yaml
-      # - /docker_data/loki:/loki
+      # - ./configs/loki.yaml:/etc/loki/local-config.yaml
+      - /docker_data/loki:/loki
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
