--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,9 +21,9 @@ services:
   loki:
     restart: always
     image: grafana/loki:${GRAFANA_LOKI_VERSION:-3.5.0}
-    volumes:
-      # - ./configs/loki.yaml:/etc/loki/local-config.yaml
-      - /docker_data/loki:/loki
+    # volumes:
+    # - ./configs/loki.yaml:/etc/loki/local-config.yaml
+    # - /docker_data/loki:/loki
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -40,7 +40,7 @@ services:
       - "GF_SMTP_PASSWORD=${SMTP_PASSWORD}"
       - "GF_SMTP_FROM_ADDRESS=server.rokaskasperavicius@gmail.com"
     volumes:
-      - /docker_data/grafana/:/var/lib/grafana
+      # - /docker_data/grafana/:/var/lib/grafana
       - ./configs/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
     ports:
       - "3000:3000"
@@ -63,9 +63,9 @@ services:
   prometheus:
     restart: always
     image: prom/prometheus:${PROMETHEUS_VERSION:-v3.3.0}
-    volumes:
-      - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
-      - /docker_data/prometheus:/prometheus
+    # volumes:
+    #   - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
+    #   - /docker_data/prometheus:/prometheus
     command:
       - --web.enable-remote-write-receiver
       - --config.file=/etc/prometheus/prometheus.yml
@@ -83,13 +83,13 @@ services:
   #   networks:
   #     - default
 
-  alloy:
-    image: grafana/alloy:${GRAFANA_ALLOY_VERSION:-v1.8.2}
-    volumes:
-      - ./configs/config.alloy:/etc/alloy/config.alloy:ro
-      - /docker_data/alloy:/var/lib/alloy/data
-    ports:
-      - "12345:12345"
-    networks:
-      - default
-    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+  # alloy:
+  #   image: grafana/alloy:${GRAFANA_ALLOY_VERSION:-v1.8.2}
+  #   volumes:
+  #     - ./configs/config.alloy:/etc/alloy/config.alloy:ro
+  #     - /docker_data/alloy:/var/lib/alloy/data
+  #   ports:
+  #     - "12345:12345"
+  #   networks:
+  #     - default
+  #   command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
