--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -1,9 +1,3 @@
 global:
-  scrape_interval: 5s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 5s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
-
-# scrape_configs:
-#   - job_name: 'node_exporter'
-#     static_configs:
-#       - targets: ['node_exporter:9100']
+  scrape_interval: 5s # Default is every 1 minute.
+  evaluation_interval: 5s # The default is every 1 minute.
