--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
 
   loki:
     restart: always
-    image: grafana/loki:v3.5.0
+    image: grafana/loki:3.5.0
     volumes:
       - /docker_data/loki:/loki
     ports:
@@ -32,7 +32,7 @@ services:
 
   grafana:
     restart: always
-    image: grafana/grafana:v11.6.1
+    image: grafana/grafana:11.6.1
     environment:
       - "GF_SMTP_ENABLED=true"
       - "GF_SMTP_HOST=smtp.gmail.com:587"
