--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ networks:
 services:
   # Collect logs from Dokku apps
   vector:
-    restart: always
+    restart: unless-stopped
     image: timberio/vector:0.43.1-debian
     volumes:
       - ./configs/vector.yaml:/etc/vector/vector.yaml:ro
@@ -18,7 +18,7 @@ services:
       - loki
 
   loki:
-    restart: always
+    restart: unless-stopped
     image: grafana/loki:3.5.0
     volumes:
       - /docker_data/loki:/loki
@@ -29,7 +29,7 @@ services:
       - default
 
   grafana:
-    restart: always
+    restart: unless-stopped
     image: grafana/grafana:11.6.1
     environment:
       - "GF_SMTP_ENABLED=true"
@@ -48,7 +48,7 @@ services:
       - .env
 
   prometheus:
-    restart: always
+    restart: unless-stopped
     image: prom/prometheus:v3.3.0
     volumes:
       - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
@@ -58,5 +58,18 @@ services:
       - --config.file=/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+    networks:
+      - default
+  # Exporter for Pi-hole metrics
+  pihole-exporter:
+    restart: unless-stopped
+    image: ekofr/pihole-exporter:latest
+    environment:
+      PIHOLE_HOSTNAME: "192.168.1.7"
+      PIHOLE_PASSWORD: "1a9016e6d2b4e220c7daae5a4b383bb6"
+      PIHOLE_PORT: "1080"
+      PORT: "9617"
+    ports:
+      - "9617:9617"
     networks:
       - default
